--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,9 @@ install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
-  - conda config --add channels paulscherrerinstitute conda-forge defaults
+  - conda config --add channels paulscherrerinstitute
+  - conda config --add channels conda-forge
+  - conda config --add channels defaults
   - conda update -q --all
   - conda install conda-build anaconda-client
   # build
