--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -18,7 +18,7 @@ requirements:
         - python
         - elog
         - pyepics
-        - bread
+        - bsread
         - jungfrau_utils
         - xrayutilities
         - xraylib
