--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -23,9 +23,9 @@ requirements:
         - xrayutilities
         - xraylib
 
-#build:
-#  entry_points:
-#    - bs = bsread.bs:main
+build:
+  entry_points:
+    - eco = eco.utilities.startup:main
 
 about:
 #    home: git@git.psi.ch:sf_daq/bsread_python.git
